[package]
name = "adaptive_work_stealing"
version = "0.1.0"
authors = ["Maiko Müller"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = {path = "../rayon"}
#rayon_logs = {path = "../rayon-logs"}
lazy_static = "*"
crossbeam-utils = "*"
criterion = {path = "../criterion.rs"}
rand = "*"

[[bench]]
name = "bench"
harness = false
